red-deployment.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: myn-currency
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
  namespace: traffic-shifting
spec:
  replicas: 2                             # Set the desired number of replicas
  selector:
    matchLabels:
      app: red-green-deployment
      deployment: red-deployment
  template:
    metadata:
      labels:
        app: red-green-deployment
        deployment: red-deployment
    spec:
      containers:
      - name: red
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text= response from red"
        - "-listen=:5678"
---
apiVersion: v1
kind: Service
metadata:
  name: red-green-service
  namespace: traffic-shifting
  labels:
    app: red-green-deployment
spec:
  type: LoadBalancer
  selector: 
    app: red-green-deployment
  ports:
  - name: green
    protocol: TCP
    port: 8888
    targetPort: 5678
