istio-traffic-management.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: red-green-service-vs
spec:
  hosts:
    - "red-green-service.tahs.local"
    - "red-green-service.traffic-shifting.svc.cluster.local"
  gateways:
    - red-green-deployment-gw
  http:
    - route:
        - destination:
            host: red-green-service.traffic-shifting.svc.cluster.local
            subset: red-deployment
          weight: 0
        - destination:
            host: red-green-service.traffic-shifting.svc.cluster.local
            subset: green-deployment
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: red-green-service-dr
spec:
  host: red-green-service.traffic-shifting.svc.cluster.local
  subsets:
    - name: red-deployment
      labels:
        app: red-green-deployment
        deployment: red-deployment
    - name: green-deployment
      labels:
        app: red-green-deployment
        deployment: green-deployment

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: red-green-deployment-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "red-green-service.tahs.local"
