test.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-green-service
  namespace: traffic-shifting
  labels:
    app: red-green-deployment
spec:
  type: LoadBalancer
  selector: 
    app: red-green-deployment
  ports:
  - name: red-green-deployment
    protocol: TCP
    port: 8888
    targetPort: 5678  # Change this to a unique port for green deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deployment
  namespace: traffic-shifting
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red-green-deployment
      deployment: green-deployment
  template:
    metadata:
      labels:
        app: red-green-deployment
        deployment: green-deployment
    spec:
      containers:
      - name: green
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=response from green"
        - "-listen=:5678"  # Change this to the same port used in the service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-deployment
  namespace: traffic-shifting
spec:
  replicas: 2
  selector:
    matchLabels:
      app: red-green-deployment
      deployment: red-deployment
  template:
    metadata:
      labels:
        app: red-green-deployment
        deployment: red-deployment
    spec:
      containers:
      - name: red
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=response from red"
        - "-listen=:5678"  # Change this to the same port used in the service

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: red-green-service-vs
spec:
  hosts:
    - "red-green-service.tahs.local"
    - "red-green-service.traffic-shifting.svc.cluster.local"
  gateways:
    - red-green-deployment-gw
  http:
    - route:
        - destination:
            host: red-green-service.traffic-shifting.svc.cluster.local
            subset: red-deployment
          weight: 0
        - destination:
            host: red-green-service.traffic-shifting.svc.cluster.local
            subset: green-deployment
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: red-green-service-dr
spec:
  host: red-green-service.traffic-shifting.svc.cluster.local
  subsets:
    - name: red-deployment
      labels:
        app: red-green-deployment
        deployment: red-deployment
    - name: green-deployment
      labels:
        app: red-green-deployment
        deployment: green-deployment

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: red-green-deployment-gw
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "red-green-service.tahs.local"
